// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`encodePostData() handles arrays 1`] = `
Array [
  "foo",
  "bar",
]
`;

exports[`encodePostData() handles blob 1`] = `
Array [
  "Blob",
  Array [
    "buffer",
  ],
  Object {
    "type": "text/plain",
  },
]
`;

exports[`encodePostData() handles objects 1`] = `
Object {
  "data": "content",
}
`;

exports[`encodePostData() handles sendBeacon 1`] = `
Array [
  "Blob",
  Array [
    Object {
      "data": "content",
    },
  ],
  Object {
    "type": "text/plain",
  },
]
`;
